updated with correct alignment for mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #map {
     height: 80vh;
-    width: 80%;
-    top: 50%;
-    left: 10%;
+    /* width: 80%; */
+    /* top: 50%; */
+    /* left: 10%; */
 }
 
